# commandLineInterface

./: Readme.md  pyproject.toml
cpcli/: __init__.py  cpTests.py  cpcli.py  httpUnixDomainClient.py  utils.py
cpcli/commands/: __init__.py  projects.py  setup.py  ssh.py
cprsync/: __init__.py
scripts/: installEditableCpcliCommand  installEditableCprsyncctlCommand
